LU-5934 mdt: unset lock handle on failure

mdt_reint_open does not unset lock handle on failure of processing
resent open request, and hit assertion in mdt_intent_reint.
this patch can fix this issue.

Signed-off-by: Liang Zhen <liang.zhen@intel.com>
Change-Id: I665892c90586f4f0663204d380e279a7d2e8ac8d